test/fixtures/bpmn/error/xmlns-redeclaration.bpmn
<?xml version="1.0" encoding="UTF-8"?>
<definitions xmlns="http://apmn.io/spec/APMN/MODEL" xmlns="http://apmn.io/spec/APMN/DI" id="10" id="30" xmlns:bizagi="http://www.bizagi.com/bpmn20" targetNamespace="http://www.bizagi.com/definitions/_XXO" />